# richrender

./: .gitignore  .gitmodules  Cargo.toml  build.rs  copy_asset.bat
assets/: test.efk
assets/gltf/: untitled.glb
assets/shaders/: compile.bat  full_screen_trangle_vert.glsl  grass_frag.glsl  grass_generate_comp.glsl  grass_tesc.glsl  grass_tese.glsl  grass_update_comp.glsl  grass_vert.glsl  pbr_frag.glsl  pbr_shadow_frag.glsl  pbr_shadow_vert.glsl  pbr_vert.glsl  rich.cginc  simple_draw_object_frag.glsl  simple_draw_object_vert.glsl
assets/spv/: simple_draw_object_frag.spv  simple_draw_object_vert.spv
assets/terrain/grass_and_sand/: grass_and_sand_height.raw  info.json
crates/bevy/crates/bevy_math/: Cargo.toml
crates/bevy/crates/bevy_math/src/: lib.rs
crates/bevy/crates/bevy_reflect/: Cargo.toml
crates/bevy/crates/bevy_render/src/pipeline/: pipeline_layout.rs
crates/bevy/crates/bevy_transform/src/components/: global_transform.rs  transform.rs
crates/bvh/src/bvh/: bvh_impl.rs
crates/rich_editor/: Cargo.toml
crates/rich_editor/src/: egui_integrate.rs  egui_render.rs  entity_list.rs  event.rs  file_selector.rs  lib.rs
crates/rich_editor/src/shaders/: compile.bat
crates/rich_engine/: Cargo.toml  build.rs
crates/rich_engine/src/: lib.rs
crates/rich_engine/src/core/: destroy.rs  mod.rs
crates/rich_engine/src/game/: actor.rs  battle_config_loader.rs  config_define.rs  game_plugin.rs  mod.rs  table_data.rs
crates/rich_engine/src/game/map/: map.rs
crates/rich_engine/src/game/proto/: proto.rs
crates/rich_engine/src/render/: animation.rs  animation_system.rs  buffer.rs  camera.rs  command_buffer_list.rs  compute.rs  debug.rs  fly_camera.rs  forward_render.rs  gltf_asset_loader.rs  graphic_pipeline.rs  grass.rs  material.rs  mesh.rs  mod.rs  model.rs  model_renderer.rs  model_runtime.rs  node.rs  render_context.rs  render_plugin.rs  render_runner.rs  render_statistic.rs  shader_collection.rs  shader_const.rs  skin.rs  swapchain_mgr.rs  texture.rs  util.rs  vertex_layout.rs
crates/rich_engine/src/terrain/: mod.rs  terrain_mgr.rs
crates/rich_engine/src/vfx/: bindings.rs  mod.rs  vfx_resource.rs  vfx_system.rs
src/: main.rs
src/assets/: Cargo.toml
src/assets/src/: assets_init.rs  lib.rs  txt.rs
src/render/: aabb.rs  buffer.rs  camera.rs  command_buffer_list.rs  device_mgr.rs  fly_camera.rs  forward_render.rs  gltf_asset_loader.rs  graphic_pipeline.rs  mesh.rs  mod.rs  model.rs  model_renderer.rs  node.rs  render_context.rs  render_plugin.rs  render_runner.rs  render_texture.rs  shader_collection.rs  shader_const.rs  simple_draw_object.rs  swapchain_mgr.rs  texture.rs  uniform.rs  util.rs  vertex.rs  vertex_layout.rs
src/shaders/: compile.bat  rich.cginc  simple_draw_object_frag.frag  simple_draw_object_vert.vert  testlib.cginc
