[package]
name = "richrender"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rich_editor = { path = "crates/rich_editor", features = ["manage_clipboard"] }
rich_engine = { path = "crates/rich_engine" }

[profile.dev.package."*"]
opt-level = 3