[package]
name = "assets"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.5"
assets_manager = { version = "0.5", features = ["ron"] }
serde = "1"
uuid = "0.8.2"
type-uuid = "0.1"
futures-executor = { version = "0.3", default-features = false }
bincode = "1.3.1"